[gd_scene load_steps=2 format=2]

[ext_resource path="res://RaptorRender/GUI/AutoScalingPopup/Content/PoolManagerPopupContent/PoolItem.gd" type="Script" id=1]

[node name="PoolItem" type="MarginContainer"]
margin_right = 386.0
margin_bottom = 22.0
script = ExtResource( 1 )

[node name="BgColorRect" type="ColorRect" parent="."]
margin_right = 386.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.301961, 0.301961, 0.301961, 1 )

[node name="Label" type="Label" parent="."]
margin_right = 386.0
margin_bottom = 22.0
text = "test pool"

[node name="NameEdit" type="LineEdit" parent="."]
visible = false
margin_right = 386.0
margin_bottom = 22.0
[connection signal="gui_input" from="." to="." method="_on_PoolItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_PoolItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PoolItem_mouse_exited"]
[connection signal="focus_exited" from="NameEdit" to="." method="_on_NameEdit_focus_exited"]
[connection signal="text_entered" from="NameEdit" to="." method="_on_NameEdit_text_entered"]
